--- a/LaTeX/ewerkl.tex
+++ b/LaTeX/ewerkl.tex
@@ -9,7 +9,7 @@
 \addcontentsline{toc}{chapter}{Ehrenwörtliche Erklärung}
 
 
-Wir, Daniel Pies, Nico Popiolek, Fabian Pulch und Manuel Techert, versichern hiermit, dass wir die hier vorliegende Gruppenarbeit mit dem Thema:
+Wir, Daniel Pies, Thomas Pötz und Manuel Techert, versichern hiermit, dass wir die hier vorliegende Gruppenarbeit mit dem Thema:
  
 \begin{quote}
 	\textit{Fallstudie \DerTitelDerArbeit}
@@ -21,10 +21,7 @@ selbstständig verfasst und keine anderen als die angegebenen Quellen und Hilfsm
 Mannheim, den 13. November 2017 \hfill Daniel Pies
 
 \vspace{2.2cm}
-Mannheim, den 13. November 2017 \hfill Nico Popiolek
-
-\vspace{2.2cm}
-Mannheim, den 13. November 2017 \hfill Fabian Pulch
+Mannheim, den 13. November 2017 \hfill Thomas Pötz
 
 \vspace{2.2cm}
 Mannheim, den 13. November 2017 \hfill Manuel Techert
