--- a/LaTeX/titlepage.tex
+++ b/LaTeX/titlepage.tex
@@ -1,14 +1,14 @@
 \begin{titlepage}
 \begin{minipage}{\textwidth}
 		\vspace{-2cm}
-		\noindent \includegraphics[scale=0.15]{img/firmenlogo.jpg} 
+	%	\noindent \includegraphics[scale=0.15]{img/firmenlogo.jpg} 
 		\hfill   \includegraphics{img/logo.jpg}
 \end{minipage}
 \vspace{1em}
 \sffamily
 \begin{center}
 	\textsf{\large{}Duale Hochschule Baden-W\"urttemberg\\[1.5mm] Mannheim}\\[4em]
-	\textsf{\textbf{\Large{}Fallstudie}}\\[3mm]
+	\textsf{\textbf{\Large{}Webbasierte Datenbankanwendungen}}\\[3mm]
 	\textsf{\textbf{\Large{}\DerTitelDerArbeit}} \\[3cm]
 	\textsf{\textbf{\Large{}Studiengang Wirtschaftsinformatik}\\[3mm] \textsf{Studienrichtung Software Engineering}}	
 	\vspace{3em}	
@@ -18,12 +18,11 @@
 \begin{minipage}{\textwidth}
 
 \begin{tabbing}
-	Verfasser: \hspace{0.85cm} \= Manuel Techert \hspace{0.85cm} \= \kill
-	Fach: 		\> Fallstudie      \> \\[1.5mm]
-	Dozent:		\> Gregor Tielsch  \> \\[3mm]
+	Verfasser: \hspace{0.85cm} \= Prof. Dr. Julian Reichwald \hspace{0.85cm} \= \kill
+	Fach: 		\> Webbasierte Datenbankanwendungen      \> \\[1.5mm]
+	Dozent:		\> Prof. Dr. Julian Reichwald  \> \\[3mm]
 	Verfasser:  \> Daniel Pies     \> Matrikelnummer: 7104609\\[1.5mm]
-				\> Nico Popiolek   \> Matrikelnummer: 9054458\\[1.5mm]
-				\> Fabian Pulch    \> Matrikelnummer: 3104428\\[1.5mm]
+				\> Thomas Pötz   \> Matrikelnummer: 5388316\\[1.5mm]
 				\> Manuel Techert  \> Matrikelnummer: 7615798\\[3mm]
 	Kurs:		\> WWI 16 SEA      \> \\
 
